--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
 	
 <h1>{{ site.subtitle }}</h1>
 
-{% include image.html url="trump-tillerson-haley.jpg" caption="New to international relations? Not sure how things work? You're welcome to follow and learn from this intro-level course." width=897 align="center" %}
+{% include image.html url="/_images/trump-tillerson-haley.jpg" caption="New to international relations? Not sure how things work? You're welcome to follow and learn from this intro-level course." width=897 align="center" %}
 
 {{ site.description }}
 
